# practice

./: LICENSE  README.md
dmoj-cpp/: CMakeLists.txt  ccc12j1.cpp  ccc21s1.cpp  ccc21s2.cpp  ccc21s3.cpp  coci12c3p4.cpp  dmopc20c4p1.cpp  missingNumber.cpp  sort1.cpp  weirdAlgorithm.cpp
general-cpp/: CMakeLists.txt  README.md  dataTypes.cpp  fizzBuzz.cpp  leapYear.cpp  milesToKilometers.cpp  palindromes.cpp  printTriangle.cpp  quadraticFormula.cpp  simpleSquares.cpp  sortingHat.cpp  switchCasePokedex.cpp  temperatureConversion.cpp  variableStory.cpp  vectorLooping.cpp  whaleTalk.cpp
general-cpp/bleeper/: bleep.cpp  functions.cpp  functions.hpp
general-cpp/profileClass/: app.cpp  profile.cpp  profile.hpp
general-cpp/ufoHangman/: ufo.cpp  ufoFunctions.cpp  ufoFunctions.hpp
general-zig/: 02-assignment.zig  03-arrays.zig  04-expressions.zig  05-while.zig  06-for.zig  07-fn.zig  08-defer.zig  09-errors.zig  10-switch.zig  11-runtime-safety.zig  12-pointers.zig  13-slices.zig  14-enums.zig  15-structs.zig  16-unions.zig  17-integers.zig  18-floats.zig  19-loops-as-expr.zig  20-optionals.zig  21-comptime.zig  22-payloads.zig  23-inline-for-loops.zig  fizz-buzz.zig  pp-fahrenheit-to-celsius.zig  zig.md
general-zig/std/: 01-allocators.zig  02-arraylist.zig  03-filesystem.zig  04-readers-writers.zig  05-fmt.zig  06-json.zig  07-random.zig
kattis-cpp/: EchoEchoEcho.cpp  FYI.cpp  Faktor.cpp  GCVWR.cpp  a_different_problem.cpp  count_the_vowels.cpp  cut_the_negativity.cpp  digit_swap.cpp  filip.cpp  finding_an_a.cpp  greetings.cpp  hello_world.cpp  jack_o_lantern_juxtaposition.cpp  jumbo_javelin.cpp  knight_packing.cpp  metronome.cpp  qaly.cpp  quadrant_selection.cpp  stuck_in_a_time_loop.cpp
