cmake_minimum_required(VERSION 3.21)
project(basics)

set(CMAKE_CXX_STANDARD 14)
include_directories(ufoHangman)
include_directories(profileClass)
include_directories(bleeper)
add_executable(HelloWorld helloWorld.cpp)
add_executable(printTriangle printTriangle.cpp)
add_executable(variableStory variableStory.cpp)
add_executable(dataTypes dataTypes.cpp)
add_executable(temperatureConversion temperatureConversion.cpp)
add_executable(milesToKilometers milesToKilometers.cpp)
add_executable(quadraticFormula quadraticFormula.cpp)
add_executable(switchCasePokedex switchCasePokedex.cpp)
add_executable(leapYear leapYear.cpp)
add_executable(sortingHat sortingHat.cpp)
add_executable(simpleSquares simpleSquares.cpp)
add_executable(fizzBuzz fizzBuzz.cpp)
add_executable(vectorLooping vectorLooping.cpp)
add_executable(whaleTalk whaleTalk.cpp)
add_executable(palindromes palindromes.cpp)
add_executable(ufoHangman ufoHangman/ufo.cpp ufoHangman/ufoFunctions.cpp ufoHangman/ufoFunctions.hpp)
add_executable(profileClass profileClass/app.cpp profileClass/profile.cpp profileClass/profile.hpp)
add_executable(bleeper bleeper/bleep.cpp bleeper/functions.hpp bleeper/functions.cpp)